June 8, 2001, Jordi Mallach <jordi@sindominio.net>
- Big internationalization patch for XQF.
  Adds intl/ and po/ subdirs, and adds the gettext marks
  to every .c that needs it. Modified configure.in and 
  the Makefile.am's to support gettext. From now on,
  every string in the code should be wrapped inside
  gettext() calls, and .c's should add a <libintl.h>
  if they don't have it already.
  Some issues with the current code remain (untranslatable
  strings), thats a work in progress.
- Initial, incomplete Spanish translation (po/es.po).
- changed configure.in so it barfs about qstat << 2.4c.

June 5, 2001: Alex Burger <alex@fragit.net>
-Tribes 2 games can now be launched.  Created a t2_exec
 function. If a name is specified in Player Profile, it 
 is used on the command line to log in.  This would only
 work if you have saved your password in the game.
 Otherwise it launches and prompts for login.

April 20, 2001: Alex Burger <alex@fragit.net>
-Now requires qstat2.4c.  Removed fixes to Tribes 2 code
 for qstat2.4b as qstat2.4c fixes the problems
-Added t2_analyze_serverinfo function to decode Game and
 GameType columns for Tribes 2.

April 19, 2001: Alex Burger <alex@fragit.net>
-Changed version to 0.9.6g
-Added Tribes 2 support.  Tribes 2 support requires at
 least QSTAT 2.4b.  As I do not even have Tribes 2 I
 can not test launching the game but it if it launches
 the same as Quake2, then it should work.  More work
 will be done to ensure the player and server info is
 being decoded correctly etc.

Feb 14, 2001: Bill Adams <bill@evil.inetarena.com>
-Oh dear god, I think I fixed the core dumps related
 to the reference counting on the server structures.
 At least to the best of my ability, I cannot make
 the server references increase or decrease
 over time: i.e. the program always exits with
 a reference count of one on all server structures.
 I could not figure out why it was 1 and not zero
 but I will deal with that later.
